--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.31.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
